syntax = "proto3";


service CartApi {
  rpc FindAll(Request)returns(Response){}
}
//http传输协议都是通过key value的方式进行传输的所以这里这定义pair
message Pair{
  string key =1;
  repeated string values=2;
}

message Request {
  string method =1;
  string path =2;
  map<string,Pair> header =3;
  map<string,Pair> get = 4;
  map<string,Pair> Post =5;
  string  body = 6;
  string url =7;
}
message Response{
  int32 statusCode =1;
  map<string,Pair> header =2;
  string body =3;
}


